--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
+    "highlight.js": "^11.9.0",
     "mongoose": "^8.4.1",
     "next": "14.2.3",
     "react": "^18",
