--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
+    "cors": "^2.8.5",
     "highlight.js": "^11.9.0",
     "mongoose": "^8.4.1",
     "next": "14.2.3",
+    "next-cors": "^1.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-spinners": "^0.13.8"
