fixed cors and upload endpoints

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # MONGODB_URI=mongodb+srv://akanni:akanni@portfolio.rolap9l.mongodb.net/
-MONGODB_URI=mongodb+srv://akanni:akanni@portfolio.rolap9l.mongodb.net/
+# MONGODB_URI=mongodb+srv://akanni:akanni@portfolio.rolap9l.mongodb.net/
