--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # MONGODB_URI=mongodb+srv://akanni:akanni@portfolio.rolap9l.mongodb.net/
-MONGODB_URI=mongodb+srv://akanni:akanni@portfolio.rolap9l.mongodb.net/
+NEXT_PUBLIC_MONGODB_URI=mongodb+srv://akanni:akanni@portfolio.rolap9l.mongodb.net/
 NEXT_PUBLIC_USER_SECRET_KEY=techlead1234portfolio.rolap9l.mongodb
